--- a/gb/20/1/8/n11776391.md
+++ b/gb/20/1/8/n11776391.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zx2957/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zx2957/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zx2957/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zx2957/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zx2957/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zx2957/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zx2957/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zx2957/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zx2957/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zx2957/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zx2957/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zx2957/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zx2957/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>名师挥毫 联新医院义卖春联 捐助弱势病友</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/a53669388b628030447529c91922e6ee-600x400.jpg" />
 <h6>台艺书画学会理事长叶兰香（左4）偕同春联挥毫义卖活动书法名师们。（桃园联新国际医院提供）
 </h6>
 <hr>
-<p>【大纪元2020年01月08日讯】（大纪元记者徐乃义台湾桃园报导）新年依照<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%B9%A0%E4%BF%97.md#1">传统习俗</a>，家家户户过年前张贴<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E6%98%A5%E8%81%94.md#1">春联</a>，象征除旧布新，为新的一年增添喜气。<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>8日于门诊大楼一楼艺文空间举办“<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E6%98%A5%E8%81%94.md#1">春联</a><ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E4%B9%89%E5%8D%96.md#1">义卖</a>捐助弱势病友”活动，数十幅红色金色春联悬挂起来喜气洋洋。</p>
-<p><ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>公共事务中心执行长谢彰文当场<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E6%8C%A5%E6%AF%AB.md#1">挥毫</a>露一手，谢彰文说，她从小学习书法，每天要写满10张单光纸，平常写书法感觉是正襟危坐与古圣先贤对话，写春联则是心情愉悦与民众面对面，希望春联能带给大家平安健康。</p>
-<figure id="attachment_11776394" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/b2e13af1cdc5e3f9440446673d0dd429.jpg"><img class="wp-image-11776394 size-large" src="https://i.epochtimes.com/assets/uploads/2020/01/b2e13af1cdc5e3f9440446673d0dd429-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">联新国际医院公共事务中心执行长谢彰文（右）当场<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E6%8C%A5%E6%AF%AB.md#1">挥毫</a>露一手，左为台艺书画家。（桃园联新国际医院提供）</figcaption></figure>
-<p>联新国际医院已连续多年举办春联<ahref="https://github.com/zx2957/djy/blob/master/gb/tag/%E4%B9%89%E5%8D%96.md#1">义卖</a>活动，俨然成为社区民众每年期待的盛事，邀请桃园市台艺书画学会理事长叶兰香、魏旭明、郑添煌、官美丽、钱国忠、陈琼秀等多位书法名家，现场挥亳书画春联。执行长谢彰文也现场挥毫露一手，不论行书或合体字都行云流水，颇有名师丰采，相当受到欢迎。</p>
+<p>【大纪元2020年01月08日讯】（大纪元记者徐乃义台湾桃园报导）新年依照<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%B9%A0%E4%BF%97.md#1">传统习俗</a>，家家户户过年前张贴<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%98%A5%E8%81%94.md#1">春联</a>，象征除旧布新，为新的一年增添喜气。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>8日于门诊大楼一楼艺文空间举办“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%98%A5%E8%81%94.md#1">春联</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%89%E5%8D%96.md#1">义卖</a>捐助弱势病友”活动，数十幅红色金色春联悬挂起来喜气洋洋。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%81%94%E6%96%B0%E5%9B%BD%E9%99%85%E5%8C%BB%E9%99%A2.md#1">联新国际医院</a>公共事务中心执行长谢彰文当场<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8C%A5%E6%AF%AB.md#1">挥毫</a>露一手，谢彰文说，她从小学习书法，每天要写满10张单光纸，平常写书法感觉是正襟危坐与古圣先贤对话，写春联则是心情愉悦与民众面对面，希望春联能带给大家平安健康。</p>
+<figure id="attachment_11776394" aria-describedby="caption-attachment-11776394" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/b2e13af1cdc5e3f9440446673d0dd429.jpg"><img class="wp-image-11776394 size-large" src="https://i.epochtimes.com/assets/uploads/2020/01/b2e13af1cdc5e3f9440446673d0dd429-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11776394" class="wp-caption-text">联新国际医院公共事务中心执行长谢彰文（右）当场<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8C%A5%E6%AF%AB.md#1">挥毫</a>露一手，左为台艺书画家。（桃园联新国际医院提供）</figcaption></figure>
+<p>联新国际医院已连续多年举办春联<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%89%E5%8D%96.md#1">义卖</a>活动，俨然成为社区民众每年期待的盛事，邀请桃园市台艺书画学会理事长叶兰香、魏旭明、郑添煌、官美丽、钱国忠、陈琼秀等多位书法名家，现场挥亳书画春联。执行长谢彰文也现场挥毫露一手，不论行书或合体字都行云流水，颇有名师丰采，相当受到欢迎。</p>
 <p>每幅春联都是书法名师一笔一墨细心挥毫的作品，搭配五颜六色的彩绘，比起印制的春联，更有人文气息与手感温度，既是春联，也是艺术创作，充满情深意重的诚挚祝福。</p>
 <p>联新国际医院社会工作课课长张雅惠表示，春联挥毫义卖活动让病患及家属感受新年新气象的氛围，并且传达医院温馨友善的形象，敦亲睦邻，推动文化艺术，也同时透过义卖来购买尿布、卫生纸、湿纸巾等必需用品，帮助经济拮据的弱势病患住院期间使用，让春联挥毫活动更有意义。</p>
 <p>理事长叶兰香与书法名师们的楷书、隶书与篆书，笔韵工法精湛，并且将锦鲤花鸟等彩绘融入春联，跃然纸上，让中华文字之美与水墨彩绘相得益彰。</p>
@@ -20,42 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/19/2/5/n11025344.md#1">华人过大年 保留中华传统习俗</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/19/12/25/n11743991.md#1">桃园庚子春联  题字名家暨桃园青年书家挥毫</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/19/12/25/n11745079.md#1">5岁女孩人小志不小 义卖替123同学付午餐费</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/19/12/26/n11746448.md#1">联新国际医院雁行计划 发挥分级医疗最大功能</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/19/12/29/n11751677.md#1">守护生命 竹梦扶轮社义卖园游会浪漫登场</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/1/2/n11763586.md#1">BIGBANG太阳办珍品义卖 收益全捐助听障者</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/1/3/n11765499.md#1">迎新年 南服中心限量送总统府春联红包袋</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/1/3/n11766220.md#1">挥毫迎新春 庆鼠年</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/18/n12118067.md#1">杨梅区茶业改良场日式宿舍修复再利用</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/18/n12117823.md#1">用爱突破藩篱 桃美馆邀跨龄及听损学生参与</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/2/5/n11025344.md#1">华人过大年 保留中华传统习俗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/25/n11743991.md#1">桃园庚子春联  题字名家暨桃园青年书家挥毫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/25/n11745079.md#1">5岁女孩人小志不小 义卖替123同学付午餐费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/26/n11746448.md#1">联新国际医院雁行计划 发挥分级医疗最大功能</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/29/n11751677.md#1">守护生命 竹梦扶轮社义卖园游会浪漫登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/2/n11763586.md#1">BIGBANG太阳办珍品义卖 收益全捐助听障者</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765499.md#1">迎新年 南服中心限量送总统府春联红包袋</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11766220.md#1">波士顿挥毫迎新春 庆鼠年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690505.md#1">2022桃园彩色海芋季 相“芋”花海开幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688214.md#1">扩大确诊学校周边里环境消毒 桃园环保局防堵</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/zx2957/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10203021.md#1" target="_blank">泣血而书——民国与文革中知识份子的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官都在观望局势</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12114594.md#1">【疫情直击】军校数据 :中国至少64万确诊</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/17/n12116013.md#1">中共驻以色列大使杜伟突然在官邸死亡</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12114129.md#1">因疫情滞留 德女游客：台湾人友善防疫棒</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/15/n12110814.md#1">IU半个月三度捐款助人 生日前夕短发受关注</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12114166.md#1">崔智友本日迎来女儿出生 母女均安</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/16/n12114576.md#1">主持遇险惊魂 张凤书长达10年没接外景</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/15/n12113316.md#1">半百年纪十天练出腹肌 李若彤分享冻龄术</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/15/n12113104.md#1">章子怡晒女儿出游视频 4岁醒醒独自潇洒骑马</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/4/13/n12026603.md#1">【命理】皇帝命是怎样来的？</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/4/25/n12061244.md#1">贾宝玉和薛宝钗的金玉之缘</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/zx2957/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zx2957/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zx2957/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/8/n11776391.htm">名师挥毫 联新医院义卖春联 捐助弱势病友</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/8/n11776391.htm">名师挥毫 联新医院义卖春联 捐助弱势病友</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zx2957/djy/blob/master/gb/20/1/8/n11776391.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zx2957/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zx2957/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zx2957/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zx2957/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zx2957/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/8/n11776391.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
