--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -137,7 +137,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10044605.md#1" target="_blank">共产党暴政录：反右运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
